[gd_scene load_steps=6 format=2]

[ext_resource path="res://juego/EstacionEspacial/EstacionEnemig3.png" type="Texture" id=1]
[ext_resource path="res://juego/EstacionEspacial/EstacionEnemiga1.png" type="Texture" id=2]
[ext_resource path="res://juego/EstacionEspacial/EstacionEnemig2.png" type="Texture" id=3]
[ext_resource path="res://juego/EstacionEspacial/EstacionEnemig4.png" type="Texture" id=4]
[ext_resource path="res://juego/EstacionEspacial/EstacionBase.gd" type="Script" id=5]

[node name="EstacionBase" type="Node2D"]
script = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]

[node name="Sprites" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Sprites"]
position = Vector2( 150, -97 )
rotation = 3.14159
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="Sprites"]
position = Vector2( 4, -296 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="Sprites"]
texture = ExtResource( 1 )

[node name="Sprite4" type="Sprite" parent="Sprites"]
position = Vector2( 4, -233 )
scale = Vector2( 1, 1.91667 )
texture = ExtResource( 4 )

[node name="PosicionesSpawn" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="PosicionesSpawn"]

[node name="Position2D2" type="Position2D" parent="PosicionesSpawn"]

[node name="Position2D3" type="Position2D" parent="PosicionesSpawn"]

[node name="Position2D4" type="Position2D" parent="PosicionesSpawn"]
